[bugfix/21877] adjust on mobile login

--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -23,9 +23,9 @@
     max-width: 427px;
     border-radius: 4px;
     background-color: #F4F7FA;
-    // @include breakpoint("mobile"){
-    //     width: ;
-    //   }
+    //  @include breakpoint("mobile"){
+    //  width: 336px;
+    // }
     .optionsSticky {
         .formTitle {
             // text-align: left;
@@ -41,7 +41,7 @@
             align-items: center;
             justify-content: center;
             @include breakpoint("mobile"){
-                transform: translateX(-50px);
+                transform: translateX(-20px);
             }
             &::after {
                 content: "Non hai ancora un account?";
@@ -91,18 +91,25 @@
                          position: absolute;
                          transform: translateY(-8px);
                          @include breakpoint("mobile"){
-                            transform: translateX(-232px);
+                            transform: translateX(-190px);
+                             max-width: 323px;
                          }
                     }
                     :global(.vtex-button) {
                         display: none;
                     }
+
                 }
             }
         }
     }
   }
-
+ .facebookOptionBtn,
+ .googleOptionBtn{
+    :global(.vtex-button) {
+        display: block;
+    }
+ }
   .contentForm {
 
       .emailVerification {
@@ -162,6 +169,12 @@
                       content: "";
                   }
               }
+              @include breakpoint("mobile"){
+                align-items: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
           }
       }
 
@@ -290,7 +303,7 @@
         }
         @include breakpoint("mobile"){
             width: 292px;
-            transform: translateX(260px);
+            transform: translate(0px,-389px);
           }
       }
 
@@ -445,34 +458,8 @@
   margin-right: 1.5rem;
 }
 
-//login account 
-
-// .formLinkContainer{
-//     position: absolute;
-//     top: 10px;
-//     right: 246px;
-//     width: 427px;
-//     height: 240px;
-//     background: #F4F7FA;
-
-//     .dontHaveAccount{
-//         width: 240px;
-//         color: white;
-//         height: 40px;
-//         margin-top: 169px;
-//         background: white;
-//         &::after{
-//            content: "registrati";
-//            text-transform: uppercase;
-//            color: #291660;
-//            font-family: Roboto;
-//            font-size: 14px;
-//            font-weight: 500;
-//            letter-spacing: 0;
-//            line-height: 16px;
-//            text-align: center;
-//            position: absolute;
-//            transform: translatey(-5px);
-//         }
-//     }
-// }
+.forgotPasswordForm{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
